# trading_platform

./: .env  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
api/: apps.py  filters.py  urls.py  views.py
api/admin/: __init__.py  admin_contact.py  admin_product.py  admin_supplier.py
api/fixtures/: contact_data.json  import_data.py  product_data.json  supplier_data.json
api/migrations/: 0001_initial.py  0002_contact_alter_product_options_alter_supplier_options_and_more.py  0003_alter_supplier_options_alter_supplier_contact_and_more.py  0004_alter_supplier_products.py  0005_alter_contact_building_number.py  0006_alter_contact_city_alter_contact_country.py  0007_alter_supplier_products.py  0008_alter_supplier_products.py  0009_alter_supplier_supplier.py  0010_alter_supplier_supplier.py  0011_alter_product_model_alter_product_title_and_more.py
api/models/: contact_model.py  product_model.py  supplier_model.py
api/serializers/: contact_serializer.py  product_serializer.py  supplier_serializer.py
core/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py
tests/: conftest.py  factories.py  fixtures.py
tests/api/contact/: contact_create_test.py  contact_delete_test.py  contact_list_test.py  contact_retrieve_test.py  contact_update_test.py
tests/api/product/: product_create_test.py  product_delete_test.py  product_list_test.py  product_retrieve_test.py  product_update_test.py
tests/api/supplier/: supplier_create_test.py  supplier_delete_test.py  (+3 more)
trading_platform/: asgi.py  settings.py  urls.py  wsgi.py
